--- a/projects/CADS-covid-topic-modeling/metadata.yml
+++ b/projects/CADS-covid-topic-modeling/metadata.yml
@@ -1,7 +1,8 @@
-title: "COVID-19-vaksiner: Misinformasjon og diskurser"
-authors: ["Siri Frisli"]
-language: ["R"]
-data: ["text corpus"]
-methods: ["Topic modeling", "sentiment analysis", "mixed-methods"]
-themes: ["Sosiale medier", "tekstanalyse", "misinformasjon"]
-description:  "Undersøker diskursive trender innen vaksinemisinformasjon fra COVID-19 pandemien. Les mer her: https://doi.org/10.1177/20563051251347614"
+title: "COVID-19 vaksiner: Misinformasjon og diskurser"
+authors: "Siri Frisli"
+language: "R"
+data: "text corpus"
+methods: ["topic modeling", "sentiment analysis", "mixed-methods"]
+themes: ["sosiale medier", "tekstanalyse", "misinformasjon"]
+description: "Undersøker diskursive trender innen vaksinemisinformasjon fra COVID-19\
+  \ pandemien. Les mer her: https://doi.org/10.1177/20563051251347614"
