--- a/projects/SSST-covid-classify-misinfo/metadata.yml
+++ b/projects/SSST-covid-classify-misinfo/metadata.yml
@@ -3,6 +3,6 @@ authors: "Siri Frisli"
 language: "R"
 data: "text corpus"
 methods: ["API", "data wrangling", "maskinlæring", "tekstklassifisering"]
-themes: ["sosiale medier", "tekstanalyse", "misinformasjon"]
+themes: ["sosiale medier", "covid", "misinformasjon"]
 description: "Henter og klargjør Twitter data, og trener en semi-supervised self-training\
   \ klassifiaksjonsmodell for å gjenkjenne misinformasjon. Les mer her: https://doi.org/10.1007/s42001-025-00367-x"
